Senior section added

--- a/index.html
+++ b/index.html
@@ -64,6 +64,59 @@
                 <p class="subheading d-none d-md-block">Slide for Details</p>
             </div>
             <section>
+                <!-- SENIOR ACCOUNTANT -->
+                <div class="photo-container">
+                    <div class="photo slide">
+                        <div class="card">
+                            <div class="card-header d-flex flex-wrap">
+                                <p class="align-self-end EY-title">EY Canada</p>
+                                <p class="ml-auto align-self-end job-role" id="int-staff-acc">Senior Accountant</p>
+                            </div>
+                            <p class= "company-description">With people and operations in more than 150 countries, EY is one of the largest professional service firms in the world. Specializing in Assurance, Consulting, Strategy and Transactions, and Tax, EY is committed to doing it's part in building a better working world. EY is determined to developing outstanding leaders who team to deliver on promises to their stakeholders. In doing so, EY plays a crucial role in building a better working world for their people, clients, and communities.</p>
+                            <div class="card-body">
+                                <p class="card-title">Key Responsibility:</p>
+                                <ul>
+                                    <li class="card-text">Manage engagement teams comprising of Staff, Intermediate, and Senior Accountants, along with oversees component teams</li>
+                                    <li class="card-text">Identify significant business accounts and design testing methodologies to address specific risks</li>
+                                    <li class="card-text">Analyze market trends and their assocaited impact on client operations</li>
+                                    <li class="card-text">Managing timelines and expectations to ensure engagements are completed seamlessly and within budget</li>
+                                </ul>
+                                <p class="card-title"> Skills Developed:</p>
+                                <div class="container">
+                                    <div class="row ">
+                                        <div class="col-sm ">
+                                            <div class="d-flex">
+                                                <img src="images/workexp/structure.svg" alt="Client Management" class="skills-logo">
+                                            </div>
+                                            <p class="skills-text">Client Management</p>
+                                        </div>
+                                        <div class="col-sm">
+                                            <div class="d-flex">
+                                                <img src="images/workexp/mentorship.svg" alt="Mentorship" class="skills-logo">
+                                            </div>
+                                            <p class="skills-text">Mentorship and Teaching</p>
+                                        </div>
+                                        <div class="col-sm">
+                                            <div class="d-flex">
+                                                <img src="images/workexp/data-analysis.svg" alt="Data Analysis" class="skills-logo">  
+                                            </div>
+                                            <p class="skills-text">Problem Identification and Data Analysis</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-footer text-muted">
+                                    <p class="work-date">September 2018 - Present</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="photo-overlay-EY d-sm-flex d-none">
+                            <img src="images/workexp/coverphotos/EY-logo-background.png" alt="company placeholder" class="overlay-EY align-self-center">
+                            <p class="slider-icon-left-EY">&lt;&lt;</p>
+                            <p class="slider-icon-right-EY">&gt;&gt;</p>
+                        </div>
+                    </div>
+                </div> 
+                <!-- END SENIOR Accountant Section -->          
                 <!-- Intermediate staff accountant -->
                 <div class="photo-container">
                     <div class="photo slide">
@@ -92,15 +145,15 @@
                                         </div>
                                         <div class="col-sm">
                                             <div class="d-flex">
-                                                <img src="images/workexp/clock.svg" alt="Client Facing communication" class="skills-logo">
+                                                <img src="images/workexp/clock.svg" alt="Time Management" class="skills-logo">
                                             </div>
-                                            <p class="skills-text">Client-Facing and Team-Based Communication</p>
+                                            <p class="skills-text">Time Management</p>
                                         </div>
                                         <div class="col-sm">
                                             <div class="d-flex">
                                                 <img src="images/workexp/loupe.svg" alt="Data Analysis" class="skills-logo">  
                                             </div>
-                                            <p class="skills-text">Micro and Macro Level Data Analysis</p>
+                                            <p class="skills-text">Analytical Analysis</p>
                                         </div>
                                     </div>
                                 </div>
@@ -141,7 +194,7 @@
                                             <div class="d-flex">
                                                 <img src="images/workexp/excel.svg" alt="Microsoft Excel" class="skills-logo">
                                             </div>
-                                            <p class="skills-text">Advanced Microsoft Excel Functions</p>
+                                            <p class="skills-text">Microsoft Excel Functions</p>
                                         </div>
                                         <div class="col-sm">
                                             <div class="d-flex">
