--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     </div>
                                 </div>
                                 <div class="card-footer text-muted">
-                                    <p class="work-date">September 2018 - Present</p>
+                                    <p class="work-date">September 2020 - Present</p>
                                 </div>
                             </div>
                         </div>
@@ -158,7 +158,7 @@
                                     </div>
                                 </div>
                                 <div class="card-footer text-muted">
-                                    <p class="work-date">September 2018 - Present</p>
+                                    <p class="work-date">September 2018 - September 2020</p>
                                 </div>
                             </div>
                         </div>
