--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <!-- WORK EXPEREINCE -->
             <div class="d-flex">
                 <h1 class="content-heading" id="work-exp">WORK EXPERIENCE</h1>
-                <p class="subheading d-none d-md-block">Slide for Details</p>
+                <p class="subheading d-none d-md-block">Click Arrows for Details</p>
             </div>
             <section>
                 <!-- SENIOR ACCOUNTANT -->
